Fix headings on mobile, fix logo aspec ratio

--- a/frontend/blocks/core/Heading/Heading.module.css
+++ b/frontend/blocks/core/Heading/Heading.module.css
@@ -9,17 +9,29 @@
 }
 
 .small {
-    font-size: 18px;
+    font-size: 16px;
+    @media (min-width: $mantine-breakpoint-md) {
+        font-size: 18px;
+    }
 }
 
 .medium {
-    font-size: 26px;
+    font-size: 22px;
+    @media (min-width: $mantine-breakpoint-md) {
+        font-size: 26px;
+    }
 }
 
 .large {
-    font-size: 32px;
+    font-size: 26px;
+    @media (min-width: $mantine-breakpoint-md) {
+        font-size: 32px;
+    }
 }
 
 .xLarge {
-    font-size: 38px;
+    font-size: 32px;
+    @media (min-width: $mantine-breakpoint-md) {
+        font-size: 38px;
+    }
 }
